# cookie-classifier

./: .gitignore  Cargo.toml  Dockerfile  README.md  sample.env
.github/workflows/: cookie-classifier-k8s.yml  main_cookie-classifier-staging.yml  main_cookie-classifier.yml  main_cookie-classify.yml
manifests/: configmap.yaml  cookie-classifier-envs.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
src/: main.rs  sample.env
src/api/: handler.rs  mod.rs
src/dto/: cookie.rs  cookie_dto.rs  csv_dto.rs  mod.rs
src/infrastructure/: auth.rs  cache.rs  csv.rs  database.rs  mod.rs  server.rs
src/model/: mod.rs  open_list.rs
src/service/: classifier.rs  layer.rs  mod.rs  rate.rs  rate_limiter.rs  rate_service.rs
src/utils/: error.rs  future.rs  mod.rs
